farmOverflow: Fix padding for log's time.

--- a/src/modules/farm_overflow/assets/style.less
+++ b/src/modules/farm_overflow/assets/style.less
@@ -43,13 +43,10 @@
         .log-list {
             margin-bottom: 10px;
 
-            td.time {
-                padding: 0 10px;
-            }
-
             td {
                 white-space: nowrap;
                 text-align: center;
+                padding: 0 5px;
 
                 .village-link {
                     max-width: 200px;
